--- a/aula14/index.html
+++ b/aula14/index.html
@@ -12,9 +12,10 @@
 <FORM>
     <label for="">Insira um texto</label>
     <input type="text" id="texto">
-    <button id="enviar">Enviar</button>
+    <button id="enviar" disabled >Enviar</button>
 
 </FORM>
+
     <Main id="principal">
 
     </Main>
